# demon

./: CMakeLists.txt  README.md  cmd.sh
include/dl/: err.hpp  pos.hpp
include/dl/lex/: cursor.hpp  lex.hpp
include/dl/parse/: ctrl.hpp  opinfo.hpp  state.hpp
include/dl/syntax/: action.hpp  binary.hpp  bracket.hpp  comment.hpp  construct.hpp  err.hpp  export.hpp  kind.hpp  multiary.hpp  node.hpp  nullary.hpp  operator.hpp  optional.hpp  precedence.hpp  space.hpp  statement.hpp  token.hpp  tokenforward.hpp  unary.hpp  value.hpp
include/dl2/: bigintops.hpp  convert.hpp  err.hpp  file.hpp  located.hpp  pos.hpp  res.hpp  util.hpp  word.hpp
include/dl2/compile/: compilerimpl.hpp
include/dl2/control/: controller.hpp  controllerimpl.hpp
include/dl2/execute/: choosenotes.txt  executor.hpp  executorimpl.hpp
include/dl2/interpret/: builtinsymbol.hpp  builtintype.hpp  corefns.txt  coretype.hpp  exceptions.hpp  instruction.hpp  interpreterimpl.hpp  types.hpp  vars.dl
include/dl2/interpreter2/: builtinsymbol.hpp  builtintypeid.hpp  core.dl  core2.dl  corefns.hpp  coreutil.hpp  exceptions.hpp  init.hpp  interpreterimpl.hpp  ptr.dl
include/dl2/interpretnode/: call.hpp  def.hpp  get.hpp  getattr.hpp  if.hpp  instruction.hpp  interpretednode.hpp  literalsuffix.hpp  nodeinterpreterimpl.hpp  nodeopinfo.hpp  nodeopkind.hpp  set.hpp
include/dl2/lex/: cursor.hpp  lex.hpp  lexer.hpp  lexerimpl.hpp  token.hpp  tokenid.hpp  tokenres.hpp
include/dl2/meta/: canderef.hpp  caneq.hpp  reference.hpp
include/dl2/parse/: context.hpp  op.hpp  opid.hpp  orientation.hpp  parser.hpp  (+3 more)
(+7 files in other folders)
